--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
 
 /* Your CSS Code here. */
+.moviePic{
+	height:380px;
+	width:550px;
+	opacity:0.9;
+}
+.movieDetail{
+	position:absolute;
+	top:300px;
+	width:530px;
+	text-align:center;
+	font-size:24px;
+	color:#edcece;
+	text-shadow: -1px 1px 0 #000,
+                         1px 1px 0 #000,
+                         1px -1px 0 #000,
+                         -1px -1px 0 #000;
+}
+
+
